# FromAPItoDB-task1

./: .env.example  01-init-db.sql  README.md  docker-compose.yml  pyproject.toml
docker/web/: Dockerfile
src/: config.py  database.py  main.py  models.py  schemas.py
